<resources>

    <string name="app_name" translatable="false">Forma Fit</string>
    <string name="slogan"> “Si te pesa la vida, hagamos cambios” </string>

    <!-- Bottom navigation View MainActivity -->
    <string name="navigation_bascula"> Báscula </string>
    <string name="navigation_imc"> IMC </string>
    <string name="navigation_desafios"> Desafíos </string>
    <string name="navigation_ajustes"> Ajustes </string>

    <!-- Nombres de botones flotantes -->
    <string name="floating_add"> Añadir </string>

    <!-- Activity Login -->
    <string name="email"> Email </string>
    <string name="password"> Contraseña </string>
    <string name="iniciarSesion"> Iniciar Sesión </string>
    <string name="crear"> Crear </string>
    <string name="sinCuenta"> ¿No tienes cuenta? </string>

    <!-- Activity Registro -->
    <string name="nombreUsuario"> Nombre de usuario </string>
    <string name="altura"> Altura </string>
    <string name="fechaNacimiento"> Fecha De Nacimiento </string>
    <string name="peso"> Peso </string>
    <string name="crearPerfil"> ★ Crea tu perfil ★ </string>
    <string name="alturaPorDefecto" translatable="false"> 0 cm </string>
    <string name="pesoPorDefecto" translatable="false"> 0 kg </string>
    <string name="hombre"> Hombre </string>
    <string name="mujer"> Mujer </string>

    <!-- Fragment Crear Entrada Peso -->
    <string name="nuevaEntradaPeso"> Nueva Entrada de Peso </string>
    <string name="aniadirImg"> Añade una imagen </string>
    <string name="grasaCorporal" translatable="false"> BF% </string>
    <string name="grasaPorDefecto" translatable="false"> [?? %] </string>
    <string name="fecha"> ★   Fecha   ★ </string>
    <string name="aniadirComentario"> Añadir comentario… </string>
    <string name="imcPromedio" translatable="false"> {??.?} </string>

    <string name="imagenEntradaPeso">" Imagen Entrada Peso "</string>

    <!-- Fragment Bascula -->
    <string name="diario"> Diario </string>
    <string name="objetivo"> Marcar un Objetivo </string>
    <string name="establecerObjetivo"> ★ Fija tu Objetivo ★ </string>
    <string name="objetivoPeso"> Objetivo </string>

    <!-- Fragment Diario -->
    <string name="advertencia"> ¡Advertencia! </string>
    <string name="borrarEntradasPeso"> Se eliminarán todas las entradas de peso menos la última introducida. </string>
    <string name="aceptar"> Aceptar </string>
    <string name="cancelar"> Cancelar </string>

    <!-- Fragment Diario -->
    <string name="muyDelgado"> Muy Delgado </string>
    <string name="bajoPeso"> Bajo Peso </string>
    <string name="pesoNormal"> Peso Normal </string>
    <string name="sobrePeso"> Sobrepeso </string>
    <string name="obesidad"> Obesidad </string>

    <string name="muyDelgadoIMC" translatable="false"> &lt; {16.99} </string>
    <string name="bajoPesoIMC" translatable="false"> {17.00 – 18.49} </string>
    <string name="pesoNormalIMC" translatable="false"> {18.50 – 24.99} </string>
    <string name="sobrePesoIMC" translatable="false"> {25.00 – 29.99} </string>
    <string name="obesidadIMC" translatable="false"> &gt; {30.00} </string>

    <string name="borrarEntradasPesoDescripcion"> Borrar Entradas de Peso </string>

    <!-- Fragment Ajustes -->
    <string name="version"> Versión </string>
    <string name="idioma"> Idioma </string>
    <string name="espanol"> Español </string>
    <string name="ingles"> Inglés </string>
    <string name="editarPerfil"> Editar Perfil </string>
    <string name="editarDatos"> ★   Edita tus datos   ★ </string>
    <string name="aplicarCambios"> Aplicar Cambios </string>
    <string name="cerrarSesion"> Cerrar Sesión </string>
    <string name="eliminarCuenta"> Eliminar Cuenta </string>
    <string name="confirmacionEliminacion"> ¿Estás seguro que quieres eliminar la cuenta? </string>

    <!-- Recycler Desfios -->
    <string name="titulo"> Título </string>
    <string name="descripcion"> Una descripción breve con textos de ejemplos y textos largos </string>
    <string name="imagenDesafio">" Imagen Desafío "</string>

    <!-- Fragment Desfios -->
    <string name="crearDesafio"> Crear Desafío </string>
    <string name="crearPropioDesafio"> Crea tu Propio Desafío </string>
    <string name="desafiosActuales"> Desafíos Actuales </string>
    <string name="desafiosCompletados"> Desafíos Completados </string>
    <string name="cambiarDesafiosCompletados"> Cambiar a Desafíos Completados </string>
    <string name="cambiarDesafiosActuales"> Cambiar a Desafíos Actuales </string>
    <string name="tituloDesafio"> Título del Desafío </string>
    <string name="aniadirDescripcion"> Añade una descripción </string>

    <!-- Mensajes de Error -->
    <string name="correoNoValido"> Correo Electrónico no válido </string>
    <string name="usuarioExiste"> El usuario ya existe </string>
    <string name="campoVacio"> Campo Vacío </string>
    <string name="introducePeso"> ¡Introduce un Peso! </string>
    <string name="introduceAltura"> ¡Introduce una Altura! </string>
    <string name="fechaNoValida"> Fecha no válida </string>
    <string name="introduceFecha"> ¡Introduce una Fecha! </string>
    <string name="emailOPasswordMal"> El Correo o la Contraseña no son correctos </string>

</resources>