<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ImcFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/backgroud_white_rounded"
        android:backgroundTint="@color/buttons_color_rosa"
        android:fontFamily="@font/barlowsemicondensedsemibold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/navigation_imc"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/buttons_color_verde" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/backgroud_white_rounded"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/pesoIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="start"
                android:text="@string/pesoPorDefecto"
                android:textColor="@color/buttons_color_rosa"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="start"
                android:text="@string/peso"
                android:textColor="@color/gris_texto"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/backgroud_white_rounded"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/alturaIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="end"
                android:text="@string/alturaPorDefecto"
                android:textColor="@color/buttons_color_verde"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="end"
                android:text="@string/altura"
                android:textColor="@color/gris_texto"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartIMC"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center">

    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/backgroud_rounded"
        android:backgroundTint="@color/verde"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/muyDelgadoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/muyDelgado"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="end"
                android:text="@string/muyDelgadoIMC"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bajoPesoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/bajoPeso"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="end"
                android:text="@string/bajoPesoIMC"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pesoNormalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/pesoNormal"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="end"
                android:text="@string/pesoNormalIMC"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sobrePesoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/sobrePeso"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView611"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="end"
                android:text="@string/sobrePesoIMC"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/obesidadLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/obesidad"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="end"
                android:text="@string/obesidadIMC"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>