<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_logo_sombra"
    android:orientation="vertical"
    tools:context=".activities.Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@color/fondo_logo"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/barlowsemicondensedsemibold"
            android:gravity="center"
            android:text="@string/crearPerfil"
            android:textColor="@color/buttons_color_rosa"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoNombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nombreUsuario"
            app:endIconContentDescription="@string/nombreUsuario"
            app:endIconDrawable="@drawable/icon_tarjeta_persona"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoEmailRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            app:endIconContentDescription="@string/email"
            app:endIconDrawable="@drawable/icon_email"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoPasswordRegistro"
            style="@style/CustomTextInputLayoutNoIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pesoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="center"
                android:text="@string/peso"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pesoKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="center"
                android:text="@string/pesoPorDefecto"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderPesoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/peso"
            android:stepSize="1"
            android:valueFrom="10"
            android:valueTo="200"
            app:thumbColor="@color/buttons_color_rosa"
            app:thumbStrokeColor="@color/buttons_color_rosa"
            app:tickColor="@color/buttons_color_rosa"
            app:trackColor="@color/buttons_color_verde" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:background="@drawable/backgroud_rounded"
                android:backgroundTint="@color/buttons_color_verde"
                android:contentDescription="@string/hombre"
                android:padding="12dp"
                android:src="@drawable/selector_hombre" />

            <ImageButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_rounded"
                android:backgroundTint="@color/buttons_color_verde"
                android:contentDescription="@string/mujer"
                android:padding="12dp"
                android:src="@drawable/selector_mujer" />
        </LinearLayout>

        <Button
            android:id="@+id/nacimientoButtonRegistro"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/buttons_color_rosa"
            android:fontFamily="@font/barlowsemicondensedsemibold"
            android:text="@string/fechaNacimiento"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alturaTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="center"
                android:text="@string/altura"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/medidaPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:gravity="center"
                android:text="@string/alturaPorDefecto"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderAlturaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/altura"
            android:stepSize="1"
            android:valueFrom="50"
            android:valueTo="250"
            app:thumbColor="@color/buttons_color_verde"
            app:thumbStrokeColor="@color/buttons_color_rosa"
            app:tickColor="@color/buttons_color_verde"
            app:trackColor="@color/buttons_color_rosa" />

        <Button
            android:id="@+id/crearUsuarioButton"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/buttons_color_verde"
            android:text="@string/crear"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>