<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_logo_sombra"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@color/fondo_logo"
        android:elevation="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="136dp"
            android:layout_height="129dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/backgroud_rounded"
            android:contentDescription="@string/app_name"
            android:elevation="10dp"
            android:padding="10dp"
            app:srcCompat="@drawable/logo_formafit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            app:endIconContentDescription="@string/email"
            app:endIconDrawable="@drawable/icon_email"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoPasswordLogin"
            style="@style/CustomTextInputLayoutNoIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/buttons_color_rosa"
            android:text="@string/iniciarSesion"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/sinCuenta"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <Button
            android:id="@+id/registroButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:backgroundTint="@color/buttons_color_verde"
            android:text="@string/crear"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>