<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AjustesFragment" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_ajustes"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/barlowsemicondensedsemibold"
        android:padding="20dp"
        android:background="@drawable/backgroud_white_rounded"
        android:layout_margin="10dp"
        android:backgroundTint="@color/buttons_color_rosa"
        app:drawableStartCompat="@drawable/icon_herramienta"
        app:drawableEndCompat="@drawable/icon_varias_herramientas"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/buttons_color_verde"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/backgroud_white_rounded"
        android:layout_margin="10dp"
        android:padding="12dp">

        <ImageView
            android:id="@+id/diarioImagen"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/backgroud_white_rounded"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo_formafit"
            android:backgroundTint="@color/fondo_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView656"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:fontFamily="@font/barlowsemicondensedsemibold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/barlowsemicondenseditalic"
                android:text="@string/slogan"
                android:textColor="@color/buttons_color_rosa"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/buttons_color_verde"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/editarPerfilAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttons_funcionales"
        android:backgroundTint="@color/violeta"
        android:elevation="8dp"
        android:fontFamily="@font/barlowsemicondensedsemibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/editarPerfil"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/icon_adelante"
        app:drawableStartCompat="@drawable/icon_persona_editar" />

    <TextView
        android:id="@+id/idiomaAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttons_funcionales"
        android:backgroundTint="@color/naranja"
        android:elevation="8dp"
        android:fontFamily="@font/barlowsemicondensedsemibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/idioma"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/icon_adelante"
        app:drawableStartCompat="@drawable/icon_idioma" />

    <TextView
        android:id="@+id/infoAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/white"
        android:background="@drawable/buttons_funcionales"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/barlowsemicondensedsemibold"
        android:elevation="8dp"
        android:gravity="center"
        app:drawableEndCompat="@drawable/icon_adelante"
        app:drawableStartCompat="@drawable/icon_info"
        android:backgroundTint="@color/azul"/>


</LinearLayout>